--- a/style.css
+++ b/style.css
@@ -1,16 +1,20 @@
+body {
+  background-color: darksalmon;
+}
+
 .container {
   display: grid;
-  /* grid-template-columns: auto auto; */
+  grid-template-columns: auto auto;
   /* grid-template-columns: repeat(5, 100px); */
   /* grid-template-rows: 200px 300px; */
   grid-gap: 20px;
   /* border: 2px solid var(--yellow); */
-border: 2px solid black;
-  grid-template-columns: 200px 200px 1fr;
+  /* grid-template-columns: 200px 200px 1fr; */
 }
 
 .item {
-  /* background-color: yellow; */
-  /* border: 2px solid black; */
-  /* text-align: center; */
+  background-color: darkSlateGray;
+  color: cornSilk;
+  border: 2px solid black;
+  text-align: center;
 }
