--- a/style.css
+++ b/style.css
@@ -20,8 +20,21 @@ body {
   padding: 2em;
 }
 
+h1 {
+  text-align: center;
+}
+
 ul {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: auto auto;
+  grid-template-columns: 6em 6em 6em;
+}
+
+li {
+  list-style-type: none;
+  background-color: darkcyan;
+  color: goldenrod;
+  text-align: center;
+  margin: 0 auto;
+  padding: 2em;
 }
