--- a/style.css
+++ b/style.css
@@ -5,11 +5,11 @@ body {
 .container {
   display: grid;
   grid-template-columns: auto auto;
-  /* grid-template-columns: repeat(5, 100px); */
-  /* grid-template-rows: 200px 300px; */
+  grid-template-columns: repeat(5, 100px);
+  grid-template-rows: 200px 300px;
   grid-gap: 20px;
-  /* border: 2px solid var(--yellow); */
-  /* grid-template-columns: 200px 200px 1fr; */
+  border: 2px solid var(--yellow);
+  grid-template-columns: 200px 200px 1fr;
 }
 
 .item {
