--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ h1 {
 ul {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: 6em 6em 6em;
+  grid-template-columns: 6em 6em 6em 6em;
 }
 
 li {
